# MB-TO-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
Documents/: Design document.docx  MB-groep voortgangsrapport.xlsx  Meeting 1.docx  Meeting 2.docx  Meeting 3.docx  contract.xlsx
Inputfiles/: CFG.json  SLR.json  SLR2.json  input-pda2cfg1.json
assets/: world.save
assets/Json_Xml/: test2.xml
assets/SLR_json/: Xml.json  Xml2.json
assets/car_presets/: physics_preset_1.xml  preset1.json  sprite_preset_3.xml
assets/hardcopy/: neuralNetID0
assets/hardcopy/hardmap/: neuralNetID0  neuralNetID1
assets/maps/: world.save  world_.save
cmake_modules/: FindSFML.cmake
src/: SLR.cpp  SLR.h  main.cpp  slr_test.cpp
src/Ai/: Car.h  FNN.cpp  FNN.h  Population.h  main.cpp
src/AutomataAndGrammars/: CFG.cpp  CFG.h  PDA.cpp  PDA.h  SLR.cpp  SLR.h  json.hpp  slr_test.cpp
src/Json_Xml/: Xml.json  test.xml
src/Sam/: CFG.cpp  CFG.h  PDA.cpp  PDA.h  SLR.cpp  SLR.h
src/game_logic/: CoreConstants.cpp  CoreConstants.h  World.cpp  World.h
src/game_logic/data_structures/: Hitbox.cpp  Hitbox.h  Raycast.cpp  Raycast.h  Vector2f.cpp  Vector2f.h
src/game_logic/entities/: Car.cpp  Car.h  Checkpoint.cpp  Checkpoint.h  Doodle.cpp  Doodle.h  EntityModel.cpp  EntityModel.h  GroundTile.cpp  GroundTile.h  IEntityModelCreator.cpp  IEntityModelCreator.h  Wall.cpp  Wall.h
src/game_logic/observer_pattern_interface/: IObserver.h  ISubject.cpp  ISubject.h
src/game_logic/utils/: Camera.cpp  Camera.h  InputMap.h  Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h  UserInputMap.h  Utils.cpp  Utils.h  json.hpp
src/game_representation/: Game.cpp  Game.h  RepresentationConstants.cpp  RepresentationConstants.h
src/game_representation/entities/: EntityModelCreator.cpp  EntityModelCreator.h  EntityView.cpp  EntityView.h  PlayerView.cpp  PlayerView.h
src/imageclasses/: Color.h  gridtest.cpp  imageProcessor.cpp  imageProcessor.h  pixelCell.cpp  pixelCell.h
